<resources>
    <string name="app_name">NetflixClone</string>
    <string name="logo">logo</string>
    <string name="search_button">Search Button</string>
    <string name="trending_now">Trending Now</string>
    <string name="popular_in_turkey">Popular in Turkey</string>
    <string name="popular_film">Popular Film</string>
    <string name="list">List</string>
    <string name="play">Play</string>
    <string name="info">Info</string>
    <string name="add">add</string>
    <string name="tv_shows">TV Shows</string>
    <string name="movies">Movies</string>
    <string name="my_list">My List</string>
    <string name="popular_tv_shows_in_turkey">Popular TV Shows In Turkey</string>
    <string name="turkish_series">Turkish Series</string>
    <string name="documentaries">Documentaries</string>
    <string name="films">Films</string>
    <string name="popular_films_in_turkey">Popular Films In Turkey</string>
    <string name="turkish_films">Turkish Films</string>
    <string name="hollywood_films">Hollywood Films</string>
    <string name="only_on_netflix">Only on Netflix</string>
    <string name="tv_shows_amp_movies"><![CDATA[TV Shows & Movies]]></string>
    <string name="preview">Preview</string>
    <string name="download">Download</string>
    <string name="movie_image">Movie Image</string>
    <string name="episodes_amp_info"><![CDATA[Episodes & Info]]></string>
    <string name="close">close</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="add_button">Add to listbutton</string>
    <string name="rate_button">Rate button</string>
    <string name="share_button">Share button</string>
    <string name="episodes">Episodes</string>
    <string name="trailer">Trailer</string>
    <string name="more_like_this">More Like This</string>
</resources>