<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/popularFilmImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/popular_film"
                    app:layout_constraintBottom_toTopOf="@id/continueWatchingTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/interstellar" />

                <ImageView
                    android:id="@+id/addImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/add"
                    android:src="@drawable/ic_add"
                    app:layout_constraintEnd_toStartOf="@+id/playButton"
                    app:layout_constraintStart_toStartOf="@+id/popularFilmImg"
                    app:layout_constraintTop_toTopOf="@id/playButton" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@id/addImg"
                    app:layout_constraintStart_toStartOf="@id/addImg"
                    app:layout_constraintTop_toBottomOf="@id/addImg" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/playButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="64dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/play"
                    android:textColor="@color/black"
                    app:icon="@drawable/ic_play"
                    app:iconTint="@color/black"
                    app:layout_constraintBottom_toBottomOf="@id/popularFilmImg"
                    app:layout_constraintEnd_toStartOf="@+id/infoImg"
                    app:layout_constraintStart_toEndOf="@+id/addImg" />

                <ImageView
                    android:id="@+id/infoImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/info"
                    android:src="@drawable/ic_info"
                    app:layout_constraintEnd_toEndOf="@+id/popularFilmImg"
                    app:layout_constraintStart_toEndOf="@+id/playButton"
                    app:layout_constraintTop_toTopOf="@id/playButton" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@id/infoImg"
                    app:layout_constraintStart_toStartOf="@id/infoImg"
                    app:layout_constraintTop_toBottomOf="@id/infoImg" />


                <TextView
                    android:id="@+id/continueWatchingTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/continue_watching"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/popularFilmImg" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/continueWatchingRV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/continueWatchingTextView"
                    tools:listitem="@layout/item_media" />

                <TextView
                    android:id="@+id/popularInTurkeyTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/popular_in_turkey"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/continueWatchingRV" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/popularInTurkeyRV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/popularInTurkeyTextView"
                    tools:listitem="@layout/item_media" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent_black"
        android:fitsSystemWindows="true">

        <Toolbar
            android:id="@+id/mainToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo"
                android:src="@drawable/netflix_icon" />

            <ImageView
                android:id="@+id/searchImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:contentDescription="@string/search_button"
                android:focusable="true"
                android:src="@drawable/ic_search"
                app:tint="@color/white" />
        </Toolbar>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            app:layout_scrollFlags="noScroll">

            <TextView
                android:id="@+id/tvShowsButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/tv_shows"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/moviesButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/movies"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/myListButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/my_list"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
